--- a/Major Project/Loan Prediction/requirements.txt
+++ b/Major Project/Loan Prediction/requirements.txt
@@ -1,7 +1,6 @@
-scikit-learn==0.22.1
-numpy
-pandas
-matplotlib
-streamlit==0.76.0
-Pillow
-seaoborn
+pandas==1.3.5
+numpy==1.21.4
+scikit-learn==1.0.1
+matplotlib==3.5.0
+seaborn==0.11.2
+streamlit==1.2.0
