--- a/Major Project/Loan Prediction/requirements.txt
+++ b/Major Project/Loan Prediction/requirements.txt
@@ -1,6 +1,6 @@
-pandas==1.3.5
-numpy==1.21.4
-scikit-learn==1.0.1
-matplotlib==3.5.0
-seaborn==0.11.2
 streamlit
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
